selezione livello- js e classi css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Griglia Campo Minato</title>
+    <title>Griglia Campo Minato v2</title>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -26,16 +26,16 @@
             <div>
                 <button id="generate-button">Genera</button>
             </div>
+
             <label for="level">Seleziona difficoltà...</label>
             <select name="level" id="level">
-                <option value="1">Livello 1</option>
-                <option value="2">Livello 2</option>
-                <option value="3">Livello 3</option>
+                <option value="1">Yasuo main</option>
+                <option value="2">GG WP</option>
+                <option value="3">Aram Chad</option>
             </select>
 
-
-
             <div id="grid-container"></div>
+
         </div>
     </main>
     <!-- /main -->
