--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <label for="level">Seleziona difficoltà...</label>
             <select name="level" id="level">
                 <option value="100">Yasuo main</option>
-                <option value="81">GG WP</option>
+                <option value="81">Mid or feed</option>
                 <option value="49">Aram Chad</option>
             </select>
 
